修改了index.html代码

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>这是一个标题</h1>
+    <p>这是一个段落</p>
+    <img src="" alt="">
 </body>
 </html>
